# nuscenes

./: .env  .gitignore  README.md  annotation-in-view.ipynb  check_duplicated_polygon.ipynb  environment.yml  extract_annotation.ipynb  extract_metadata.ipynb  generate_videos.ipynb  generate_videos_2.ipynb  generate_videos_2.py  generate_videos_compressed.ipynb  generate_videos_interpolated.ipynb  map_annotations_to_segments.ipynb  partition_metadata.ipynb  partition_road.ipynb  pyproject.toml  requirements.txt  split-frames.ipynb
.github/workflows/: cleanup-nb.yml
utils/: compose2_factory.py  compose_compressed_factory.py  compose_factory.py  data_dirs.py  filter_road.py  frame_json_encoder.py  frame_with_best_alignments.py  frame_with_most_alignments.py  get_camera_heading.py  get_camera_position.py  get_camera_rotation.py  get_compose_and_videos.py  get_heading.py  get_heading_from_north.py  get_location.py  get_videos.py  index.py  load_image.py  load_images.py  normalize_angle.py  typings.py  unique.py
utils/compose_factories/: compose.py  frame_with_best_alignments.py  frame_with_most_alignments.py  interpolated_compose.py
