[tool.poetry]
name = "nuscenes"
version = "0.1.0"
description = ""
authors = ["Chanwut (Mick) Kittivorawong <chanwutk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
opencv-python = "^4.6.0.66"
notebook = "^6.4.12"
numpy = "^1.23.3"
pandas = "^1.5.0"
pyquaternion = "^0.9.9"
tqdm = "^4.64.1"
psycopg2-binary = "^2.9.5"
postgis = "^1.0.4"
python-mobilitydb = "^0.1.2"
altair = "^4.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
verbose = true

[tool.autopep8]
in-place = true
recursive = true
aggressive = 3
verbose = 2
